# flutter_document_capture

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_document_capture_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/pages/: benchmark_scan_page.dart  benchmark_test_page.dart  comparison_page.dart  realtime_comparison_page.dart
example/lib/services/: layout_service.dart
example/lib/utils/: score_calculator.dart
ios/: download_frameworks.sh  flutter_document_capture.podspec
ios/Classes/: DocumentCapturePlugin.h  DocumentCapturePlugin.m  flutter_document_capture.c
ios/Frameworks/: opencv2
lib/: flutter_document_capture.dart  flutter_document_capture_bindings_generated.dart
src/: CMakeLists.txt  capture_engine.cpp  capture_engine.hpp  document_detector.cpp  document_detector.hpp  ffi_bridge.cpp  image_enhancer.cpp  image_enhancer.hpp  perspective_corrector.cpp  perspective_corrector.hpp  quality_assessor.cpp  quality_assessor.hpp
